samples/_failures_safe/1761690414_31cfea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2bddd6f.c: In function ‘main’:
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected expression at end of input
  151 |                     } else
      |                     ^
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2bddd6f.c:151:21: error: expected declaration or statement at end of input
